[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/game/sprites/custom/pedestal_two.png" type="Texture" id=1]
[ext_resource path="res://scr/objects/pedestal_two_type_a.gd" type="Script" id=2]
[ext_resource path="res://assets/art/game/sprites/custom/alert.png" type="Texture" id=3]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 6.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 4.5 )

[node name="pedestal_two_type_a" type="Node2D"]
light_mask = 2
script = ExtResource( 2 )

[node name="sprite_pedestal" type="Sprite" parent="."]
light_mask = 4
texture = ExtResource( 1 )
vframes = 5

[node name="sprite_input" type="Sprite" parent="."]
light_mask = -2147483646
texture = ExtResource( 1 )
vframes = 5

[node name="sprite_output" type="Sprite" parent="."]
light_mask = 2
z_index = 7
texture = ExtResource( 1 )
vframes = 5
frame = 4

[node name="sprite_alert" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 8, -16 )
texture = ExtResource( 3 )

[node name="detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 2147483651

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 2
position = Vector2( 0, 1.497 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
light_mask = 2
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
light_mask = -2147483646
position = Vector2( 0, 3.5 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -8 )
